Fixed some visible errors in dev-mode (browser), Added Starscape #2 #3
Scaling still does not work correctly.

--- a/src/styles/ui/Button.scss
+++ b/src/styles/ui/Button.scss
@@ -14,7 +14,7 @@
   padding: 6px;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 16;
   text-align: center;
   height: 35px;
   border: none;
